--- a/css/main.css
+++ b/css/main.css
@@ -1945,7 +1945,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #65df59;
+  background: #8bffc3;
 }
 .links-of-blogroll {
   font-size: 13px;
